fix: text padding on small devices

--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -76,6 +76,11 @@
         padding-left: 5px;
         font-size: small;
     }
+
+    #blog {
+        padding-left: 28px;
+        font-size: smaller;
+    }
 }
 
 
